Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -564,8 +564,8 @@
         "#@title　生成した画像フォルダのアップロード/zipファイルダウンロード(任意)\n",
         "import os\n",
         "\n",
-        "upload_download = \"Upload_zip_drive and Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
-        "folder_type = \"raw\" #@param [\"raw\",\"zip\"] \n",
+        "upload_download = \"Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
+        "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
         "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
         "if upload_download == \"Upload_drive\":\n",
