Colaboratory を使用して作成しました

--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -293,8 +293,8 @@
         "  print(\"\")\n"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "LuEJIAHLGXEu"
+        "id": "LuEJIAHLGXEu",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -399,6 +399,9 @@
       "cell_type": "markdown",
       "source": [
         "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
+        "<br>\n",
+        "▼より高速な画像生成を行いたい方向け<br>\n",
+        "ColabのProに加入するよりも[Paperspace](https://note.com/ai_nios/n/n2203de79bc16)を使用することをおすすめします。<br>\n",
         "<br>\n",
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
