Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -177,6 +177,9 @@
       "source": [
         "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
         "<br>\n",
+        "▼より高速な画像生成を行いたい方向け<br>\n",
+        "ColabのProに加入するよりも[Paperspace](https://note.com/ai_nios/n/n2203de79bc16)を使用することをおすすめします。<br>\n",
+        "<br>\n",
         "**モデルを切り替えたい場合**<br>\n",
         "・2の実行を止めモデルを選択し直す。\n",
         "その後、再度2を実行する。<br>\n",
