Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -204,7 +204,7 @@
       "cell_type": "code",
       "source": [
         "#@title 3.VAE\n",
-        "vae_name = \"kl-f8-anime\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"anything-v4.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -243,7 +243,7 @@
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
         "import os\n",
         "\n",
-        "model_type =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
+        "model_type =\"Webui_Extension\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
         "\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -277,7 +277,7 @@
         "    install(modelUrl)\n",
         "\n",
         "elif modelUrl == \"\":\n",
-        "  print(\"スキップ\")\n",
+        "  print(\"modelUrlに値が指定されていないため、スキップされます。\")\n",
         "  \n",
         "else:\n",
         "    def install(url):\n",
@@ -470,7 +470,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>"
+        "**生成した画像の利用については自己判断および自己責任でお願いします。**<br>\n",
+        "▼より高速な画像生成を行いたい方向け<br>\n",
+        "ColabのProに加入するよりも[Paperspace](https://note.com/ai_nios/n/n2203de79bc16)を使用することをおすすめします。<br>\n",
+        "<br>"
       ],
       "metadata": {
         "id": "x54Lv69ieDvt"
@@ -482,7 +485,7 @@
         "#@title　生成した画像フォルダのアップロード/zipファイルダウンロード(任意)\n",
         "import os\n",
         "\n",
-        "upload_download = \"Upload_drive\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
+        "upload_download = \"Upload_zip_drive and Download_zip\"  # @param [\"Upload_drive\", \"Download_zip\", \"Upload_zip_drive and Download_zip\"]\n",
         "folder_type = \"zip\" #@param [\"raw\",\"zip\"] \n",
         "folder_name = \"generated_image\" # @param {'type': 'string'}\n",
         "\n",
@@ -496,7 +499,7 @@
         "    elif folder_type == \"raw\":\n",
         "        !cp -r \"/content/stable-diffusion-webui/outputs\" \"/content/drive/MyDrive/{folder_name}\"\n",
         "\n",
-        "elif upload_download == \"Download\":\n",
+        "elif upload_download == \"Download_zip\":\n",
         "    from google.colab import files\n",
         "    if folder_type == \"zip\":\n",
         "        !zip -r \"/content/{folder_name}.zip\" \"/content/stable-diffusion-webui/outputs/txt2img-images/\"\n",
@@ -528,6 +531,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "▼学習済みモデルの検索<br>\n",
         "[HuggingFace](https://huggingface.co/ckpt)<br>\n",
         "[Civitai](https://civitai.com/)<br><br>\n",
