Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -20,6 +20,8 @@
       "outputs": [],
       "source": [
         "#@title 1.WebUIのインストール\n",
+        "import os\n",
+        "\n",
         "Mount_Drive = False # @param {type: \"boolean\"}\n",
         "\n",
         "if Mount_Drive:\n",
@@ -540,7 +542,7 @@
         "%cd /content/stable-diffusion-webui\n",
         "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
         "\n",
-        "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
+        "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple --no-half-vae"
       ],
       "metadata": {
         "id": "Pet8RD2Q6-4L",
