--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -79,8 +79,12 @@
         "  !git clone https://github.com/hnmr293/sd-webui-cutoff /content/stable-diffusion-webui/extensions/sd-webui-cutoff\n",
         "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "  !git clone https://github.com/etherealxx/batchlinks-webui /content/stable-diffusion-webui/extensions/batchlinks-webui\n",
+        "  !git clone https://github.com/camenduru/stable-diffusion-webui-catppuccin /content/stable-diffusion-webui/extensions/stable-diffusion-webui-catppuccin\n",
+        "  !git clone https://github.com/KohakuBlueleaf/a1111-sd-webui-locon /content/stable-diffusion-webui/extensions/a1111-sd-webui-locon\n",
+        "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg /content/stable-diffusion-webui/extensions/stable-diffusion-webui-rembg\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
+        "!git -C /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai reset --hard\n",
         "\n",
         "#Extensions3(ControlNet)　任意\n",
         "ControlNet = True #@param {'type':'boolean'}\n",
