--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -11,6 +11,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2023/4/21 <br>\n",
+        "StableDiffusion webuiを無料で使用する場合、Colabを使用できなくなる可能性があることが示唆されています。無料で利用する場合は、自己責任でお願いします。<br>\n",
+        "プロ版の方は、今まで通り利用していただいて構いません<br>\n",
+        "[詳細](https://research.google.com/colaboratory/faq.html#limitations-and-restrictions)"
+      ],
+      "metadata": {
+        "id": "HT3GILQvO6QR"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
