--- a/Nios_v2_update.ipynb
+++ b/Nios_v2_update.ipynb
@@ -11,6 +11,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2023/4/21 <br>\n",
+        "StableDiffusion webuiを無料で利用する場合、アカウントがBANされることはありませんが、Colabが一時的に利用できなくなる可能性があることが示唆されています。無料で実行する場合は、自己責任でお願いします。。<br>\n",
+        "Pro版の方は、今まで通り利用していただいて構いません<br>\n",
+        "[詳細](https://research.google.com/colaboratory/faq.html#limitations-and-restrictions)"
+      ],
+      "metadata": {
+        "id": "4QgX7fFl42VP"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
