Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -91,6 +91,7 @@
         "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-wildcards.git /content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards\n",
         "  !git clone https://github.com/etherealxx/batchlinks-webui /content/stable-diffusion-webui/extensions/batchlinks-webui\n",
         "  !git clone https://github.com/AUTOMATIC1111/stable-diffusion-webui-rembg /content/stable-diffusion-webui/extensions/stable-diffusion-webui-rembg\n",
+        "  !git clone https://github.com/blue-pen5805/sdweb-easy-prompt-selector.git /content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector\n",
         "%cd /content/stable-diffusion-webui\n",
         "!git reset --hard\n",
         "!git -C /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai reset --hard\n",
@@ -238,7 +239,7 @@
         "#@title 3.VAE\n",
         "import os\n",
         "\n",
-        "vae_name = \"anything-v4.0.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
+        "vae_name = \"orangemix.vae.pt\" #@param [\"vae-ft-mse-840000-ema-pruned\",\"vae-ft-mse-560000-ema-pruned\",\"kl-f8-anime\",\"kl-f8-anime2\",\"Anything-V3.0.vae.pt\",\"anything-v4.0.vae.pt\",\"autoencoder_fix_kl-f8-trinart_characters\",\"orangemix.vae.pt\"] {allow-input: false}\n",
         "\n",
         "url_dict = {\n",
         "    \"vae-ft-mse-840000-ema-pruned\": \"https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\",\n",
@@ -277,7 +278,7 @@
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
         "import os\n",
         "\n",
-        "model_type =\"Checkpoint\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\"] {allow-input: false}\n",
+        "model_type =\"Easy_Prompt_Selector\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Webui_Extension\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "\n",
         "if model_type == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
@@ -309,6 +310,39 @@
         "        pretrained_model = \"/content/stable-diffusion-webui/extensions\"\n",
         "        !git clone {url} {pretrained_model}/{base_name}\n",
         "    install(modelUrl)\n",
+        "\n",
+        "elif model_type == \"Easy_Prompt_Selector\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\"\n",
+        "    if modelUrl == \"\":\n",
+        "        from google.colab import files\n",
+        "        import os\n",
+        "\n",
+        "        def upload_files():\n",
+        "          uploaded = files.upload()\n",
+        "          for filename in uploaded.keys():\n",
+        "            if filename.endswith(\".yml\") or filename.endswith(\".yaml\"):\n",
+        "              os.rename(filename, \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags/\" + filename)\n",
+        "              print(\"Uploaded file:\", filename)\n",
+        "\n",
+        "        upload_files()\n",
+        "\n",
+        "    else:\n",
+        "        def install(url):\n",
+        "            base_name = os.path.basename(url)\n",
+        "\n",
+        "            if url.startswith(\"https://drive.google.com\"):\n",
+        "                os.chdir(\"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\")\n",
+        "                !gdown --fuzzy {url}\n",
+        "            elif url.startswith(\"https://huggingface.co/\"):\n",
+        "                if \"/blob/\" in url:\n",
+        "                    url = url.replace(\"/blob/\", \"/resolve/\")\n",
+        "                huggingface_token =\"YOUR_HUGGINGFACE_TOKEN\" # 自分のトークンに変更\n",
+        "                user_header = f'\"Authorization: Bearer {huggingface_token}\"'\n",
+        "                !aria2c --console-log-level=error --summary-interval=10 --header={user_header} -c -x 16 -s 16 -k 1M {url} -d {pretrained_model} -o {base_name} \n",
+        "            else:\n",
+        "                !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
+        "                \n",
+        "        install(modelUrl)\n",
         "\n",
         "elif modelUrl == \"\":\n",
         "  print(\"modelUrlに値が指定されていないため、スキップされます。\")\n",
@@ -397,7 +431,7 @@
         "#@markdown [LoRAの使用方法](https://intindex.stars.ne.jp/archives/12296)\n",
         "\n",
         "\n",
-        "Lora_name =\"AI_uehara\" #@param [\"\",\"AI_uehara\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
+        "Lora_name =\"\" #@param [\"\",\"AI_uehara\",\"Anime_Screencap_Style_LoRA\",\"One_Piece_Wano_Style_LoRA\",\"Eula_LoRA\",\"Yelan_LoRA\",\"Barbara_LoRA\",\"Diluc_LoRA\",\"Mona_LoRA\",\"Ganyu_LoRA\",\"Jean_LoRA\",\"Kujou_Sara_LoRA\",\"Lisa_LoRA\",\"Raiden_Shogun_LoRA\",\"Shenhe_LoRA\",\"Yoimiya_LoRA\",\"Zhongli_LoRA\",\"Yae_Miko_LoRA\"] {allow-input:false}\n",
         "\n",
         "Lora_dict={\n",
         "\t\"AI_uehara\":\"https://civitai.com/api/download/models/23042\",\n",
@@ -486,10 +520,6 @@
         "%cd /content/stable-diffusion-webui\n",
         "\n",
         "!sed -i -e '''/    prepare_environment()/a\\    os.system\\(f\\\"\"\"sed -i -e ''\\\"s/dict()))/dict())).cuda()/g\\\"'' /content/stable-diffusion-webui/repositories/stable-diffusion-stability-ai/ldm/util.py\"\"\")''' /content/stable-diffusion-webui/launch.py\n",
-        "!sed -i -e 's/fastapi==0.90.1/fastapi==0.89.1/g' /content/stable-diffusion-webui/requirements_versions.txt\n",
-        "\n",
-        "!mkdir /content/stable-diffusion-webui/extensions/deforum-for-automatic1111-webui/models\n",
-        "\n",
         "!sed -i -e 's/\\\"sd_model_checkpoint\\\"\\,/\\\"sd_model_checkpoint\\,sd_vae\\,CLIP_stop_at_last_layers\\\"\\,/g' /content/stable-diffusion-webui/modules/shared.py\n",
         "\n",
         "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
@@ -592,7 +622,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "provenance": [],
       "include_colab_link": true
