Colaboratory を使用して作成しました

--- a/Nios_v3.ipynb
+++ b/Nios_v3.ipynb
@@ -389,7 +389,7 @@
         "    install(modelUrl)\n",
         "\n",
         "#@markdown ▼driveからファイルをコピーする場合、[ファイルパス](https://camo.qiitausercontent.com/76671e92e7da4f86f522fcb372fb49db27fa805b/68747470733a2f2f71696974612d696d6167652d73746f72652e73332e61702d6e6f727468656173742d312e616d617a6f6e6177732e636f6d2f302f3533333834342f66623462326238382d383938302d373932362d353063632d3063613830386137343334642e706e67)を入力してください。ファイルが見つからない場合はスキップされます。\n",
-        "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/iroha.safetensors\" #@param {type: \"string\"}\n",
+        "drivePath = \"/content/drive/MyDrive/s/\\u4EBA_\\u9854.yml\" #@param {type: \"string\"}\n",
         "\n",
         "if drivePath:\n",
         "  if \"例:\" in drivePath:\n",
@@ -525,8 +525,7 @@
         "!python launch.py --listen --xformers --enable-insecure-extension-access --theme dark --gradio-queue --multiple"
       ],
       "metadata": {
-        "id": "Pet8RD2Q6-4L",
-        "cellView": "form"
+        "id": "Pet8RD2Q6-4L"
       },
       "execution_count": null,
       "outputs": []
@@ -622,8 +621,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "gpuClass": "standard",
