Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -14,8 +14,8 @@
       "cell_type": "markdown",
       "source": [
         "2023/4/21 <br>\n",
-        "StableDiffusion webuiを無料で利用する場合、アカウントがBANされることはありませんが、Colabが一時的に利用できなくなる可能性があることが示唆されています。無料で実行する場合は、自己責任でお願いします。。<br>\n",
-        "Pro版の方は、今まで通り利用していただいて構いません<br>\n",
+        "StableDiffusion webuiを無料で利用する場合、アカウントがBANされることはありませんが、Colabが一時的に利用できなくなる可能性があることが示唆されています。無料で実行する場合は、自己責任でお願いします。<br>\n",
+        "Pro版の方は、今まで通り利用していただいて構いません。<br>\n",
         "[詳細](https://research.google.com/colaboratory/faq.html#limitations-and-restrictions)"
       ],
       "metadata": {
@@ -401,7 +401,7 @@
       "source": [
         "#@title ドライブをマウント\n",
         "\n",
-        "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
+        "model_type_1 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "if model_type_1 == \"Checkpoint\":\n",
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_1 == \"Hypernetwork\":\n",
@@ -415,6 +415,8 @@
         "    pretrained_model_1 = \"/content/stable-diffusion-webui/extensions/sd-webui-additional-networks/models/lora\"\n",
         "elif model_type_1 == \"Wildcards\":\n",
         "    pretrained_model_1  = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
+        "elif model_type == \"Easy_Prompt_Selector\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\"\n",
         "    \n",
         "drivePath = \"\\u4F8B:/content/drive/MyDrive/LoRA/output/iroha.safetensors\" #@param {type: \"string\"}\n",
         "\n",
@@ -456,7 +458,7 @@
       "source": [
         "#@title カスタムモデル\n",
         "#@markdown [実行方法](https://twitter.com/ai_nios/status/1639659834240008192?s=20) \n",
-        "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\"] {allow-input: false}\n",
+        "model_type_2 =\"LoRA\" #@param [\"Checkpoint\",\"Hypernetwork\",\"Texual_Inversion\",\"Aesthetic_Gradients\",\"LoRA\",\"LoRA(additional-networks)\",\"LyCORIS\",\"Wildcards\", \"VAE\",\"Easy_Prompt_Selector\"] {allow-input: false}\n",
         "if model_type_2 == \"Checkpoint\":\n",
         "    pretrained_model = \"/content/stable-diffusion-webui/models/Stable-diffusion\"\n",
         "elif model_type_2 == \"Hypernetwork\":\n",
@@ -478,6 +480,21 @@
         "    pretrained_model = \"/content/stable-diffusion-webui/extensions/stable-diffusion-webui-wildcards/wildcards\"\n",
         "    !aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -d {pretrained_model} {url}\n",
         "\n",
+        "elif model_type == \"Easy_Prompt_Selector\":\n",
+        "    pretrained_model = \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags\"\n",
+        "    if modelUrl == \"\":\n",
+        "        from google.colab import files\n",
+        "        import os\n",
+        "\n",
+        "        def upload_files():\n",
+        "          uploaded = files.upload()\n",
+        "          for filename in uploaded.keys():\n",
+        "            if filename.endswith(\".yml\") or filename.endswith(\".yaml\"):\n",
+        "              os.rename(filename, \"/content/stable-diffusion-webui/extensions/sdweb-easy-prompt-selector/tags/\" + filename)\n",
+        "              print(\"Uploaded file:\", filename)\n",
+        "\n",
+        "        upload_files()\n",
+        "        \n",
         "elif modelUrl == \"\":\n",
         "  print(\"\")\n",
         "  \n",
