Colaboratory を使用して作成しました

--- a/Nios_v4_final.ipynb
+++ b/Nios_v4_final.ipynb
@@ -378,7 +378,7 @@
         "#@title Extensions\n",
         "import os\n",
         "\n",
-        "extensions = \"https://github.com/yfszzx/stable-diffusion-webui-images-browser, https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\"  # @param {type:\"string\"}\n",
+        "extensions = \"\\u4F8B:https://github.com/yfszzx/stable-diffusion-webui-images-browser, https://github.com/DominikDoom/a1111-sd-webui-tagcomplete\"  # @param {type:\"string\"}\n",
         "extensions = list(map(str.strip, extensions.split(\",\")))\n",
         "\n",
         "def install(urls):\n",
