Colaboratory を使用して作成しました

--- a/Nios_Model_Card_Selection.ipynb
+++ b/Nios_Model_Card_Selection.ipynb
@@ -13,6 +13,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "2023/4/21 <br>\n",
+        "有料プランの方のみご利用いただけます。<br>\n",
+        "[詳細](https://research.google.com/colaboratory/faq.html#limitations-and-restrictions)"
+      ],
+      "metadata": {
+        "id": "xMpSXAZt4voz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**0.最初にランタイムの設定をGPUに変更してく\n",
         "ださい**<br>\n",
         "「ランタイム」→「ランタイムのタイプを変更」でGPUを選び \"保存\" をクリック\n",
